apps/goatlint/src/snapshots/_-c fixtures__cli__eslintrc_env__eslintrc_env_browser.json fixtures__cli__eslintrc_env__test.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c fixtures/cli/eslintrc_env/eslintrc_env_browser.json fixtures/cli/eslintrc_env/test.js
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 127 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
